log
Fri, May 16, 2025  9:35:10 AM: 
 sudoku.c | 29 +++++++++++++++++++++++++----
 1 file changed, 25 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:8: error: 'is_final' undeclared (first use in this function)
     if(is_final) return listAdj;
        ^~~~~~~~
sudoku.c:54:8: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:90:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Fri, May 16, 2025  9:36:29 AM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:8: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if(is_final(n)) return listAdj;
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
3cc500d
Fri, May 16, 2025  9:36:47 AM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:8: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if(is_final(n)) return listAdj;
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
48909fd
Fri, May 16, 2025  9:37:06 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:54:8: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if(is_final(n) == 0) return listAdj;
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
56eec0f
Fri, May 16, 2025  9:38:56 AM: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
6c55eff
